--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -710,7 +710,7 @@
 	timestamp = {2007.03.30}
 }
 @ARTICLE{Correia98,
-	author = {A. H. Correia and C. C. Freitas and A. C. Frery and S. J. S. Sant'Anna},
+	author = {A. H. Correia and C. C. Freitas and A. C. Frery and S. J. Sant'Anna},
 	title = {A User Friendly Statistical System for Polarimetric {SAR} Image Classification},
 	journal = {Revista de Teledetecci\'on},
 	year = {1998},
@@ -939,8 +939,8 @@
 	remoto},
 	publisher = {INPE},
 	year = {1993},
-	author = {Dutra, L. V. and Frery, A. C. and T. Krug and N. D. A. Mascarenhas
-	and S. J. S. Sant'Anna and Yanasse, C. C. F.},
+	author = {Dutra, L. V. and Frery, A. C. and T. Krug and N. D. Mascarenhas
+	and S. J. Sant'Anna and Yanasse, C. C.},
 	address = {S\~ao Jos\'e dos Campos, SP, Brazil},
 	note = {Notas de curso do Simp\'osio Brasileiro de Sensoriamento Remoto,
 	7.}
@@ -1133,7 +1133,7 @@
 }
 @INPROCEEDINGS{correiasantos,
 	author = {Freitas, C. C. and Correia, A. and Frery, A. C. and Sant'Anna, S.
-	J. S.},
+	J.},
 	title = {A System for Multilook Polarimetric {SAR} Image Statistical Classification},
 	booktitle = {Second Latinoamerican Seminar on Radar Remote Sensing: Image Processing
 	Techniques},
@@ -1183,7 +1183,7 @@
 	note = {SPIE vol. 2315}
 }
 @ARTICLE{6377288,
-	author = {A. C. Frery and R. J. Cintra and Nascimento, A. D. C.},
+	author = {A. C. Frery and R. J. Cintra and Nascimento, A. D.},
 	title = {Entropy-based Statistical Analysis of {PolSAR} Data},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing},
 	year = {2013},
@@ -1264,7 +1264,7 @@
 	doi = {10.1080/01431160802448919}
 }
 @ARTICLE{freryun99,
-	author = {A. C. Frery and C. C. Freitas and S. J. S. Sant'Anna and C. D. Renn{\'o}},
+	author = {A. C. Frery and C. C. Freitas and S. J. Sant'Anna and C. D. Renn{\'o}},
 	title = {Statistical Properties of {SAR} Data and their Consequences},
 	journal = {Seminars of the United Nations Programme on Space Applications},
 	year = {1999},
@@ -1272,7 +1272,7 @@
 	pages = {53--62}
 }
 @INPROCEEDINGS{freryluccaigarss99,
-	author = {A. C. Frery and E. D. V. Lucca and C. C. Freitas and S. J. S. Sant'Anna},
+	author = {A. C. Frery and E. D. V. Lucca and C. C. Freitas and S. J. Sant'Anna},
 	title = {{SAR} Segmentation Algorithms: A Quantitative Assessment},
 	booktitle = {International Geoscience and Remote Sensing Symposium: Remote Sensing
 	of the System Earth -- A Challenge for the 21st Century},
@@ -1284,7 +1284,7 @@
 	note = {CD-ROM}
 }
 @ARTICLE{Frery97,
-	author = {A. C. Frery and H. J. M{\"u}ller and C. C. F. Yanasse and S. J. S. {Sant'Anna}},
+	author = {A. C. Frery and H. J. M{\"u}ller and C. C. Yanasse and S. J. {Sant'Anna}},
 	title = {A model for extremely heterogeneous clutter},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing},
 	year = {1997},
@@ -1293,7 +1293,7 @@
 	number = {3}
 }
 @INPROCEEDINGS{frerycuritiba93,
-	author = {Frery, A. C. and Sant'Anna, S. J. S.},
+	author = {Frery, A. C. and Sant'Anna, S. J.},
 	title = {Redu\c c\~ao de Ru\'{\i}do Em Imagens {SAR} Pelo Uso de Filtros Robustos},
 	booktitle = {Simp\'osio Brasileiro de Sensoriamento Remoto, 7.},
 	year = {1993},
@@ -1313,7 +1313,7 @@
 	publisher = {SBC/UFPE}
 }
 @ARTICLE{asp98,
-	author = {Frery, A. C. and Sant'Anna, S. J. S. and Mascarenhas, N. D. A. and
+	author = {Frery, A. C. and Sant'Anna, S. J. and Mascarenhas, N. D. and
 	Bustos, O. H.},
 	title = {Robust inference techniques for speckle noise reduction in 1-look
 	amplitude {SAR} images},
@@ -1323,7 +1323,7 @@
 	pages = {61--76}
 }
 @INPROCEEDINGS{florence,
-	author = {Frery, A. C. and Yanasse, C. C. F. and Sant'Anna, S. J. S.},
+	author = {Frery, A. C. and Yanasse, C. C. and Sant'Anna, S. J.},
 	title = {Alternative distributions for the multiplicative model in {SAR} images},
 	booktitle = {Quantitative remote sensing for science and applications},
 	year = {1995},
@@ -1334,7 +1334,7 @@
 	note = {IGARSS'95 Proc.}
 }
 @INPROCEEDINGS{mexico,
-	author = {Frery, A. C. and Yanasse, C. C. F. and Sant'Anna, S. J. S.},
+	author = {Frery, A. C. and Yanasse, C. C. and Sant'Anna, S. J. },
 	title = {Statistical characterization of {SAR} data: the multiplicative model
 	and extensions},
 	booktitle = {Latinoam\'erica evaluada desde el espacio},
@@ -1345,8 +1345,8 @@
 	organization = {SELPER}
 }
 @INPROCEEDINGS{eupedroetal97,
-	author = {Frery, A. C. and Yanasse, C. C. F. and Vieira, P. R. and Sant'Anna,
-	S. J. S. and Renn{\'o}, C. D.},
+	author = {Frery, A. C. and Yanasse, C. C. and Vieira, P. R. and Sant'Anna,
+	S. J. and Renn{\'o}, C. D.},
 	title = {A user-friendly system for synthetic aperture radar image classification
 	based on grayscale distributional properties and context},
 	booktitle = {Simp\'osio Brasileiro de Computa\c c\~ao Gr\'afica e Processamento
@@ -2211,8 +2211,8 @@
 }
 
 @INPROCEEDINGS{luccasantos,
-	author = {E. V. D. Lucca and Freitas, C. C. and Frery, A. C. and Sant'Anna,
-	S. J. S.},
+	author = {E. V. Lucca and Freitas, C. C. and Frery, A. C. and Sant'Anna,
+	S. J.},
 	title = {Comparison of {{SAR}} segmentation algorithms},
 	booktitle = {Second Latinoamerican Seminar on Radar Remote Sensing: Image Processing
 	Techniques},
@@ -2373,7 +2373,7 @@
 	number = {5}
 }
 @INPROCEEDINGS{Mata-Moya2011,
-	author = {Mata-Moya, D. and de Nicolas-Presa, J.M. and Jarabo-Amores, P. and
+	author = {Mata-Moya, D. and de Nicolas-Presa, J-M. and Jarabo-Amores, P. and
 	Gil-Pita, R.},
 	title = {Statistical blind classification of terrain surfaces in {SAR} images},
 	booktitle = {2nd International Conference on Space Technology},
@@ -2552,8 +2552,8 @@
 	booktitle = {Proc. Intell. Vehicles Symp},
 	year = {2002}
 }
-@ARTICLE{EdgeDetectionDistancesEntropiesJSTARS,
-	author = {Nascimento, A. D. C. and Horta, M. M. and Frery, A. C. and Cintra,
+@ARTICLE{Nascimento2014,
+	author = {Nascimento, A. D. and Horta, M. M. and Frery, A. C. and Cintra,
 	R. J.},
 	title = {Comparing Edge Detection Methods Based on Stochastic Entropies and
 	Distances for {PolSAR} Imagery},
@@ -3159,7 +3159,7 @@
 	number = {1}
 }
 @INPROCEEDINGS{frerycorreiaigarss99,
-	author = {Sant'{A}nna, S. J. S. and Correia, A. H. and Freitas, C. C. and Frery,
+	author = {Sant'{A}nna, S. J. and Correia, A. H. and Freitas, C. C. and Frery,
 	A. C.},
 	title = {The Discriminatory Capability of Polarimetric {{SAR}} Data for Land
 	Use Classification},
@@ -3173,7 +3173,7 @@
 	note = {CD-ROM}
 }
 @MASTERSTHESIS{sid95,
-	author = {Sant'Anna, S. J. S.},
+	author = {Sant'Anna, S. J.},
 	title = {Avalia\c c\~ao do desempenho de filtros redutores de ``speckle''
 	em imagens de radar de abertura sint\'etica},
 	school = {Instituto Nacional de Pesquisas Espaciais},
@@ -3430,7 +3430,7 @@
 	timestamp = {2012.12.28}
 }
 @ARTICLE{ClassificationPolSARSegmentsMinimizationWishartDistances,
-	author = {W. B. Silva and C. C. Freitas and S. J. S. {Sant'Anna} and A. C. Frery},
+	author = {W. B. Silva and C. C. Freitas and S. J. {Sant'Anna} and A. C. Frery},
 	title = {Classification of Segments in {PolSAR} Imagery by Minimum Stochastic
 	Distances Between {W}ishart Distributions},
 	journal = {IEEE Journal of Selected Topics in Applied Earth Observations and
@@ -3471,7 +3471,7 @@
 	Polarimetry, Wishart distribution}
 }
 @INPROCEEDINGS{6049821,
-	author = {Silva, W. B. and Pereira, L. O. and Sant'Anna, S. J. S. and Freitas,
+	author = {Silva, W. B. and Pereira, L. O. and Sant'Anna, S. J. and Freitas,
 	C. C. and Guimaraes, R. J. P. S. and Frery, A. C.},
 	title = {Land cover discrimination at {B}razilian {A}mazon using region based
 	classifier and stochastic distance},
@@ -3481,7 +3481,7 @@
 	issn = {2153-6996}
 }
 @ARTICLE{4786545,
-	author = {Silveira, M. and Nascimento, J.C. and Marques, J.S. and Marcal, A.R.S.
+	author = {Silveira, M. and Nascimento, J. C. and Marques, J. S. and Marcal, A. R.
 	and Mendonca, T. and Yamauchi, S. and Maeda, J. and Rozeira, J.},
 	title = {Comparison of Segmentation Methods for Melanoma Diagnosis in Dermoscopy
 	Images},
@@ -3686,7 +3686,7 @@
 	publisher = {IEEE}
 }
 @ARTICLE{Tison2004,
-	author = {Tison, C. and Nicolas, J.-M. and Tupin, F. and Maitre, H.},
+	author = {Tison, C. and Nicolas, J-M. and Tupin, F. and Maitre, H.},
 	title = {A new statistical model for {M}arkovian classification of urban areas
 	in high-resolution {SAR} images},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing },
@@ -3913,7 +3913,7 @@
 	address = {Sheffield, UK}
 }
 @TECHREPORT{yanas95,
-	author = {Yanasse, C. C. F. and Frery, A. C. and Sant'Anna, S. J. S.},
+	author = {Yanasse, C. C. and Frery, A. C. and Sant'Anna, S. J.},
 	title = {Stochastic distributions and the multiplicative model: relations,
 	properties, estimators and applications to {SAR} image analysis},
 	institution = {INPE},
@@ -3922,7 +3922,7 @@
 	address = {S\~ao Jos\'e dos Campos, SP, Brazil}
 }
 @INPROCEEDINGS{Yanasse93,
-	author = {Yanasse, C. C. F. and Frery, A. C. and Sant'Anna, S. J. S. and Hernandez,
+	author = {Yanasse, C. C. and Frery, A. C. and Sant'Anna, S. J. and Hernandez,
 	P. F. and Dutra, L. V.},
 	title = {Statistical analysis of {SAREX} data over {T}apaj{\'o}s - {B}razil},
 	booktitle = {SAREX-92: South American Radar Experiment},
@@ -3942,7 +3942,7 @@
 	pages = {493--507}
 }
 @ARTICLE{yanarsoe96,
-	author = {Yanasse, C. C. F. and Sant'Anna, S. J. S. and Frery, A. C. and Renn{\'o},
+	author = {Yanasse, C. C. and Sant'Anna, S. J. and Frery, A. C. and Renn{\'o},
 	C. D. and Soares, J. V. and Luckman, A. J.},
 	title = {Exploratory study of the relationship between tropical forest regeneration
 	stages and {SIR-C} {L} and {C} data},
@@ -4293,7 +4293,7 @@
 }
 @ARTICLE{Nascimento2009,
 	Title                    = {Hypothesis Testing in Speckled Data with Stochastic Distances},
-	Author                   = {A. D. C. Nascimento and Cintra, R. J. and Frery, A. C.},
+	Author                   = {A. D. Nascimento and Cintra, R. J. and Frery, A. C.},
 	Journal                  = {IEEE Transactions on Geoscience and Remote Sensing},
 	Pages                    = {373--385},
 	Volume                   = {48},
@@ -4492,7 +4492,7 @@
 }
 @article{nicolas2002,
 	title={Introduction to second kind statistics: Application of log-moments and log-cumulants to the analysis of radar image distributions},
-	author={Nicolas, J. M. and Anfinsen, S. N.},
+	author={Nicolas, J-M. and Anfinsen, S. N.},
 	journal={Traitement du Signal},
 	volume={19},
 	number={3},
@@ -5164,7 +5164,7 @@
 	abstract = {Due to the rapid advance of general-purpose graphics processing unit (GPU), it is an active research topic to study performance improvement of non-linear optimization with parallel implementation on GPU, as attested by the much research on parallel implementation of relatively simple optimization methods, such as the conjugate gradient method. We study in this context the L-BFGS-B method, or the limited memory Broyden–Fletcher–Goldfarb–Shanno with boundaries, which is a sophisticated yet efficient optimization method widely used in computer graphics as well as general scientific computation. By analyzing and resolving the inherent dependencies of some of its search steps, we propose an efficient GPU-based parallel implementation of L-BFGS-B on the GPU. We justify our design decisions and demonstrate significant speed-up by our parallel implementation in solving the centroidal Voronoi tessellation (CVT) problem as well as some typical computing problems.},
 }
 @inbook{Nicolas2010,
-	author = {Nicolas, J.M. and Adragna, F.},
+	author = {Nicolas, J-M. and Adragna, F.},
 	publisher = {John Wiley and Sons, Ltd},
 	isbn = {9780470611111},
 	title = {The Principles of Synthetic Aperture Radar},
@@ -5319,19 +5319,6 @@
 	year={2020},
 	url = {https://github.com/acfrery/Statistics-SAR-Intensity.git},
 }
-@article{Palacio2019,
-	author = {M. G. Palacio and S. B. Ferrero and A. C. Frery},
-	title = {Revisiting the effect of spatial resolution on information content based on classification results},
-	journal = {International Journal of Remote Sensing},
-	volume = {40},
-	number = {12},
-	pages = {4489-4505},
-	year  = {2019},
-	publisher = {Taylor & Francis},
-	doi = {10.1080/01431161.2019.1569278},
-	eprint = { 
-	https://doi.org/10.1080/01431161.2019.1569278	
-	}
 	
 }
 @InProceedings{Buemi2009,
@@ -5433,6 +5420,27 @@
 	}
 	
 }
+
+@ARTICLE{Santos2017,  
+	author={C. A. Santos and D. L. Martins and N. D. Mascarenhas},  
+	journal={IEEE Transactions on Image Processing},   
+	title={Ultrasound Image Despeckling Using Stochastic Distance-Based BM3D},   
+	year={2017},  
+	volume={26},  
+	number={6},  
+	pages={2632-2643},}
+
+@inproceedings{Penna2013,
+	title={Intensity SAR Image Denoising with Stochastic Distances Using Non-Local Means Filter},
+	author={P. A. Penna and N. D. Mascarenhas},
+	year={2013},
+	month = {august},
+	booktitle = {Workshop of Works in Progress (WIP) in SIBGRAPI 2013 (XXVI Conference on Graphics, Patterns and Images)},
+	editor = {Alejandro C. Frery, Soraia Musse},
+	address = {Arequipa, Peru},
+	url = {http://www.ucsp.edu.pe/sibgrapi2013/eproceedings/}
+}
+
 @ARTICLE{Penna2019,
 	author={Penna, P. and Mascarenhas, N.},
 	journal={IEEE Transactions on Geoscience and Remote Sensing},
@@ -5447,7 +5455,7 @@
 	month={Sep.},}
 
 @Article{Carvalho2019,
-	AUTHOR = {Carvalho, N. and Sant'Anna Bins, L. and Sidnei S. Sant'Anna},
+	AUTHOR = {Carvalho, N. and Sant'Anna Bins, L. and S. J. Sant'Anna},
 	TITLE = {Analysis of Stochastic Distances and {W}ishart Mixture Models Applied on {PolSAR} Images},
 	JOURNAL = {Remote Sensing},
 	VOLUME = {11},
@@ -5529,14 +5537,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 }
 
 
-@Unpublished{NonparametricEntropyEstimationanOverview,
-	author = {J. Beirlant and E. J. Dudewicz and L. Gy{\"o}rfi and E. C. van der Meulen},
-	title  = {Nonparametric entropy estimation: an overview},
-	year   = {1996},
-	file   = {:art96_pdf/NonparametricEntropyEstimationanOverview.pdf:PDF},
-	url    = {https://www.researchgate.net/profile/Jan_Beirlant/publication/243768404_Nonparametric_Entropy_Estimation_An_Overview/links/0046352937863d9023000000/Nonparametric-Entropy-Estimation-An-Overview.pdf},
-}
-
 @Article{White1991,
 	author = { R. G. White },
 	title = {Change detection in {SAR} imagery},
@@ -5609,3 +5609,248 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	doi        = {10.1007/s11045-010-0113-4},
 	groups     = {Journal Article},
 }
+
+@ARTICLE{Cassetti2020,
+	author = {Cassetti, J. and Frery, A. C. },
+	title = {An Improved Minimum-Distance Texture Estimator for Speckled Data under the $\mathcal{G}^0$ Model},
+	journal = {Artículo enviado para su publicación},
+	year = {2020}
+}
+
+@ARTICLE{Akbarizadeh2012,  
+	author={G. {Akbarizadeh}},  
+	journal={IEEE Transactions on Geoscience and Remote Sensing},   
+	title={A New Statistical-Based Kurtosis Wavelet Energy Feature for Texture Recognition of SAR Images},   
+	year={2012},  
+	volume={50},  
+	number={11},  
+	pages={4358-4368}
+}
+
+@article{Palacio2019,
+	author = {M. G. Palacio and S. B. Ferrero and A. C. Frery},
+	title = {Revisiting the effect of spatial resolution on information content based on classification results},
+	journal = {International Journal of Remote Sensing},
+	volume = {40},
+	number = {12},
+	pages = {4489-4505},
+	year  = {2019},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/01431161.2019.1569278},	
+	URL = { https://doi.org/10.1080/01431161.2019.1569278},
+	eprint = { 	https://doi.org/10.1080/01431161.2019.1569278},
+}
+
+@article{Zhang2019,
+	author = {A. Zhang and X. Yang and L. Jia and J. Ai and Z. Dong},
+	title = {SAR image classification using adaptive neighborhood-based convolutional neural network},
+	journal = {European Journal of Remote Sensing},
+	volume = {52},
+	number = {1},
+	pages = {178-193},
+	year  = {2019},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/22797254.2019.1579616},	
+	URL = { https://doi.org/10.1080/22797254.2019.1579616},
+	eprint = { 	https://doi.org/10.1080/22797254.2019.1579616}
+}
+
+@article{Parikh2020,
+	author = { H. Parikh  and  S. Patel  and  V. Patel },
+	title = {Classification of SAR and PolSAR images using deep learning: a review},
+	journal = {International Journal of Image and Data Fusion},
+	volume = {11},
+	number = {1},
+	pages = {1-32},
+	year  = {2020},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/19479832.2019.1655489},	
+	URL = {	https://doi.org/10.1080/19479832.2019.1655489},
+	eprint = { 	https://doi.org/10.1080/19479832.2019.1655489}	
+}
+
+@ARTICLE{Fernandez2017,
+	author={J. I. Fernández-Michelli and M. Hurtado and J. A. Areta and C. H. Muravchik},
+	journal={IEEE Geoscience and Remote Sensing Letters}, 
+	title={Unsupervised Polarimetric SAR Image Classification Using $\mathcal {G}_{p}^{0}$ Mixture Model}, 
+	year={2017},
+	volume={14},
+	number={5},
+	pages={754-758}}
+
+@article{Ebrahimi1994,
+	title = "Two measures of sample entropy",
+	journal = "Statistics & Probability Letters",
+	volume = "20",
+	number = "3",
+	pages = "225 - 234",
+	year = "1994",
+	issn = "0167-7152",
+	doi = "https://doi.org/10.1016/0167-7152(94)90046-9",
+	url = "http://www.sciencedirect.com/science/article/pii/0167715294900469",
+	author = "N. Ebrahimi and K. Pflughoeft and E. S. Soofi",
+}
+
+@ARTICLE{Ferreira2020,
+	author={J. Ferrerira and Nascimento, A. D.},
+	journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing}, 
+	title={Shannon Entropy for the $\mathcal {G}_{I}^{0}$ Model: A New Segmentation Approach}, 
+	year={2020},
+	volume={13},
+	number={},
+	pages={2547-2553}}
+
+@ARTICLE{Frery2012,	
+	author={A. C. Frery and R. J. Cintra and A. D. Nascimento},	
+	journal={IEEE Transactions on Geoscience and Remote Sensing}, 	
+	title={Entropy-Based Statistical Analysis of PolSAR Data}, 	
+	year={2013},	
+	volume={51},	
+	number={6},	
+	pages={3733-3743},}
+
+@article{AlOmari2013,
+	author = {A. I. Al-Omari},
+	title = {A new measure of entropy of continuous random variable},
+	journal = {Journal of Statistical Theory and Practice},
+	volume = {10},
+	number = {4},
+	pages = {721-735},
+	year  = {2016},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/15598608.2016.1217444},	
+	URL = { https://doi.org/10.1080/15598608.2016.1217444},
+	eprint = { 	https://doi.org/10.1080/15598608.2016.1217444}
+	
+}
+
+@article{Beirlant1997,
+	title={Nonparametric entropy estimation. An overview},
+	author={J. Beirlant and E. J. Dudewicz and L. Gy{\"o}rfi and I. Denes},
+	journal={International Journal of Mathematical and Statistical Sciences},
+	volume={6},
+	number={1},
+	pages={17-39},	
+	year={1997}
+}
+
+@INPROCEEDINGS{Behmardi2011,  
+	author={B. Behmardi and R. Raich and A. O. Hero},  
+	booktitle={2011 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},   
+	title={Entropy estimation using the principle of maximum entropy},   
+	year={2011},  
+	volume={},  
+	number={},  
+	pages={2008-2011},}
+
+@INPROCEEDINGS{Buades2005,	
+	author={A. Buades and B. Coll and J-M. Morel},	
+	booktitle={2005 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'05)}, 	
+	title={A non-local algorithm for image denoising}, 	
+	year={2005},	
+	volume={2},	
+	number={},	
+	pages={60-65 vol. 2},}
+
+@inproceedings{Puig2003,
+	author    = {D. Puig and M. A. Garc\'ia},
+	title     = {Pixel classification through divergence-based integration of texture methods with conflict resolution},
+	booktitle = {Proceedings of the 2003 International Conference on Image Processing,
+	{ICIP} 2003, Barcelona, Catalonia, Spain, September 14-18, 2003},
+	pages     = {1037--1040},
+	publisher = {{IEEE}},
+	year      = {2003},
+	url       = {https://doi.org/10.1109/ICIP.2003.1246862},
+	doi       = {10.1109/ICIP.2003.1246862},
+	timestamp = {Wed, 16 Oct 2019 14:14:52 +0200},
+	biburl    = {https://dblp.org/rec/conf/icip/PuigG03.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{Schou2003,
+	author={J. Schou and H. Skriver and A. A. Nielse and K. Conradsen},
+	journal={IEEE Transactions on Geoscience and Remote Sensing}, 
+	title={CFAR edge detector for polarimetric SAR images}, 
+	year={2003},
+	volume={41},
+	number={1},
+	pages={20-32},
+	doi={10.1109/TGRS.2002.808063},
+	ISSN={1558-0644},
+	month={Jan},}
+
+@ARTICLE{Frery2019,
+	author={Frery, A. C.},
+	journal={Journal of Radars}, 
+	title={Stochastic contrastmeasures for SAR data: A survey}, 
+	year={2019},
+	volume={8},
+	number={6},
+	pages={758-781},
+	doi={ 10.12000/JR19108}}
+
+@ARTICLE{Deledalle2009,  
+	author={C. Deledalle and L. Denis and F. Tupin},  
+	journal={IEEE Transactions on Image Processing},   
+	title={Iterative Weighted Maximum Likelihood Denoising With Probabilistic Patch-Based Weights},   
+	year={2009},  
+	volume={18},  
+	number={12},  
+	pages={2661-2672},}
+
+@article{Buades2010,
+	title={Image Denoising Methods. A New Nonlocal Principle},
+	author={A. Buades and B. Coll and J. M. Morel},
+	journal={SIAM Review},
+	year={2010},
+	volume={52},
+	pages={113-147}
+}
+
+@ARTICLE{Xue2013,	
+	author={B. Xue and Y. Huang and J. Yang and L. Shi and Y. Zhan and X. Cao},	
+	journal={IEEE Geoscience and Remote Sensing Letters}, 	
+	title={Fast Nonlocal Remote Sensing Image Denoising Using Cosine Integral Images}, 	
+	year={2013},	
+	volume={10},	
+	number={6},	
+	pages={1309-1313},}
+
+@ARTICLE{Zhang2011,  
+	author={W. G. Zhang and Q. Zhang},  
+	journal={Electronics Letters},   
+	title={SAR image despeckling combining target detection with improved nonlocal means},   
+	year={2011},  
+	volume={47},  
+	number={12},  
+	pages={724 -725},}
+
+@ARTICLE{Rodrigues2016,
+	author={F. A. {\'A}vila Rodrigues and J. F. Rocha Neto and R. C. Pinheiro Marques and F. N. Sombra de Medeiros and J. Santos Nobre},
+	journal={IEEE Geoscience and Remote Sensing Letters}, 
+	title={SAR Image Segmentation Using the Roughness Information}, 
+	year={2016},
+	volume={13},
+	number={2},
+	pages={132-136},}
+
+@article{Torres2013,
+	title={SAR Image Despeckling Algorithms using Stochastic Distances and Nonlocal Means},
+	author={L. Torres and A. C. Frery},
+	journal={ArXiv},
+	year={2013},
+	volume={abs/1308.4338}
+}
+
+@InProceedings{Torres2012,
+	author={Torres, L.	and Cavalcante, T. and Frery, A. C.},
+	editor={Alvarez, L. and Mejail, M. and Gomez, L. and Jacobo, J.},
+	title={Speckle Reduction Using Stochastic Distances},
+	booktitle={Progress in Pattern Recognition, Image Analysis, Computer Vision, and Applications},
+	year={2012},
+	publisher={Springer Berlin Heidelberg},
+	address={Berlin, Heidelberg},
+	pages={632--639},
+	isbn={978-3-642-33275-3}
+}
+
