--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5854,3 +5854,11 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	isbn={978-3-642-33275-3}
 }
 
+@ARTICLE{Nobre2016,  
+	author={R. H. Nobre and F. A. A. Rodrigues and R. C. P. Marques and J. S. Nobre and J. F. S. R. Neto and F. N. S. Medeiros},  
+	journal={IEEE Signal Processing Letters},   
+	title={SAR Image Segmentation With Rényi's Entropy},   
+	year={2016},  
+	volume={23},  
+	number={11},  
+	pages={1551-1555},}
